# orangevault

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  fnox.toml  mise.toml  plan.md  wrangler.toml
.github/workflows/: mise-release.yml  mise-upgrade.yml  mise.yml
cli/: Cargo.toml
cli/src/: main.rs
integration-tests/: package.json  tsconfig.json  vitest.config.ts
integration-tests/tests/: auth.test.ts  cors.test.ts  cron.test.ts  d1.test.ts  error-format.test.ts  helpers.ts  mf.ts  notifications.test.ts  organizations.test.ts  sends.test.ts  smoke.test.ts  two-factor.test.ts  vault.test.ts
migrations/: 0001_initial.sql
migrations/0001_initial/: up.sql
migrations/0002_events/: up.sql
scripts/: fetch-web-vault.sh
src/: config.rs  error.rs  jobs.rs  lib.rs  notifications.rs  util.rs
src/api/: accounts.rs  ciphers.rs  emergency.rs  events.rs  folders.rs  icons.rs  identity.rs  mod.rs  notifications.rs  organizations.rs  sends.rs  sync.rs  two_factor.rs  web.rs
src/auth/: claims.rs  guards.rs  jwt.rs  mod.rs
src/crypto/: hmac.rs  mod.rs  pbkdf2.rs  random.rs  rsa.rs  totp.rs
src/db/: models.rs  queries.rs
src/middleware/: cors.rs  headers.rs  mod.rs  security.rs
src/models/: cipher.rs  config.rs  folder.rs  mod.rs  organization.rs  send.rs  sync.rs  user.rs
