[package]
name = "orangevault"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ["d1"] }
worker-macros = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Crypto", "SubtleCrypto", "CryptoKey", "CryptoKeyPair"] }
uuid = { version = "1", features = ["v4", "js"] }
chrono = { version = "0.4", features = ["wasmbind", "clock"], default-features = false }
base64 = "0.22"
console_error_panic_hook = "0.1"
serde_urlencoded = "0.7"
rmpv = "1"

[profile.release]
opt-level = "s"
lto = true
