[package]
name = "orangevault-cli"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "orangevault-cli"
path = "src/main.rs"

[dependencies]
# Bitwarden master-key derivation (PBKDF2 → master key + hash, HKDF stretch →
# enc/mac keys) — pure-Rust, cross-platform. Was rbw, which pulls unix-only
# `daemonize` and won't build on Windows.
pbkdf2      = "0.12"
hkdf        = "0.12"

# Crypto for the registration request payload:
rsa         = { version = "0.9", features = ["sha2"] }
sha2        = "0.10"
hmac        = "0.12"
aes         = "0.8"
cbc         = { version = "0.1", features = ["std"] }
rand        = { version = "0.8", features = ["std", "std_rng"] }
base64      = "0.22"

reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio       = { version = "1", features = ["macros", "rt-multi-thread"] }
clap        = { version = "4", features = ["derive", "env"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
